# brain-games

./: .gitignore  README.md  pyproject.toml
brain_games/: cli.py  constants.py  game_even_functionality.py  general-logic.py  general_logic.py  logic.py
brain_games/games/: brain_calc_logic.py  brain_even_logic.py  brain_gcd_logic.py  brain_prime_logic.py  brain_progression_logic.py  game_calc_logic.py  game_even_logic.py  game_gcd_logic.py  game_prime_logic.py  game_progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
